--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   display: flex;
 }
 
-video {
+.card {
   width: 100px;
+}
+
+video {
+  width: 100%;
+}
+
+.bottom-page {
+  width: 100%;
+  height: 100px;
 }
